src/test/ui/error-codes/E0594.stderr
error[E0594]: cannot assign to data in a `&` reference
  --> $DIR/E0594.rs:4:5
   |
LL |     NUM = 20;
   |     ^^^^^^^^ cannot assign

error: aborting due to previous error

